--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- bootstrap  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <!-- CSS file -->
     <link href="style.css" rel="stylesheet">
 
     <!-- jQuery script -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- JS script -->
     <script src="application.js"></script>
 
-    <title>To-Do Webapp</title>
+    <title>Get it done!</title>
   </head>
   <body>
     <div class="container-fluid px-md-3 rounded  shadow-md-lg text-white">
       <h2 class="text-center py-3">Get it done!</h2>
-      <div class="task-list px-1">
-        <!-- sample entry, delete later -->
-        <div class="task">
+      <div class="px-1">
+        <div class="task-list ">
+
+        </div>
+        <!-- <div class="task">
           <hr>
           <i class="far fa-square pr-3"></i>
           <p class="d-inline">Sample Task</p>
@@ -32,7 +38,7 @@
           <hr>
           <i class="far fa-square pr-3"></i>
           <p class="d-inline">Sample Task</p>
-        </div>
+        </div> -->
         <div class="task-entry pb-4">
           <hr>
           <i class="fas fa-plus pr-3"></i>
@@ -40,7 +46,5 @@
         </div>
       </div>
     </div>
-
-
   </body>
 </html>
