Basic functionality for adding and deleting entries completed. Updated HTML file to include completed tasks, for which functionality will be added in the next commit.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <title>Get it done!</title>
   </head>
   <body>
-    <div class="container-fluid px-md-3 rounded  shadow-md-lg text-white">
-      <h2 class="text-center py-3">Get it done!</h2>
+    <div class="container-fluid px-md-3 rounded shadow-md-lg">
+      <h2 class="text-center py-3 text-white">Get it done!</h2>
       <div class="px-1">
-        <div class="task-list ">
-
+        <div class="task-list text-white">
         </div>
         <!-- <div class="task">
           <hr>
@@ -39,10 +38,13 @@
           <i class="far fa-square pr-3"></i>
           <p class="d-inline">Sample Task</p>
         </div> -->
-        <div class="task-entry pb-4">
+        <div class="task-entry pb-4 text-white">
           <hr>
           <i class="fas fa-plus pr-3"></i>
           <input class="border-0" type="text" placeholder="Add New Task"/>
+        </div>
+        <div class="completed py-4 d-none">
+          <h5>Completed Tasks</h5>
         </div>
       </div>
     </div>
