--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <i class="fas fa-plus pr-3"></i>
           <input class="border-0" type="text" placeholder="Add New Task"/>
         </div>
-        <div class="completed py-4 d-none">
+        <div class="inactive py-4">
           <h5>Completed Tasks</h5>
         </div>
       </div>
