--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
           <i class="fas fa-plus pr-3"></i>
           <input class="border-0" type="text" placeholder="Add New Task"/>
         </div>
-        <div class="inactive py-4">
+        <hr class="divider">
+        <div class="pb-3">
           <h5>Completed Tasks</h5>
+          <div class="inactive ">
+          </div>
         </div>
       </div>
     </div>
