Added functionality that hides the completed tasks when there is no tasks to display. Other minor edits.

--- a/index.html
+++ b/index.html
@@ -28,25 +28,15 @@
       <div class="px-1">
         <div class="task-list text-white">
         </div>
-        <!-- <div class="task">
-          <hr>
-          <i class="far fa-square pr-3"></i>
-          <p class="d-inline">Sample Task</p>
-        </div>
-        <div class="task">
-          <hr>
-          <i class="far fa-square pr-3"></i>
-          <p class="d-inline">Sample Task</p>
-        </div> -->
         <div class="task-entry pb-4 text-white">
           <hr>
           <i class="fas fa-plus pr-3"></i>
           <input class="border-0" type="text" placeholder="Add New Task"/>
         </div>
-        <hr class="divider">
-        <div class="pb-3">
+        <hr class="divider d-none">
+        <div class="pb-3 pt-1 inactive-holder d-none">
           <h5>Completed Tasks</h5>
-          <div class="inactive ">
+          <div class="inactive">
           </div>
         </div>
       </div>
